# hamsterfiler

./: CMakeLists.txt  README.md
cmake/: config-hamsterfiler.h.cmake
debian/: changelog  control  copyright  postinst  postrm  rules
desktop/: CMakeLists.txt  hamsterfiler.desktop
extra/: hamsterfiler  hamsterfiler.desktop
src/: CMakeLists.txt  applicationdialog.cpp  applicationdialog.h  applicationswindow.cpp  applicationswindow.h  applicationswindow.ui  assets.qrc  attentiondialog.cpp  attentiondialog.h  attentiondialog.ui  bookmarkswindow.cpp  bookmarkswindow.h  bookmarkswindow.ui  clipboard.cpp  clipboard.h  clipboardwindow.cpp  clipboardwindow.h  clipboardwindow.ui  confirmdialog.h  createdialog.cpp  createdialog.h  descriptivedelegate.h  detaileddelegate.h  filedetailsdialog.cpp  filedetailsdialog.h  filedetailsdialog.ui  filelistview.cpp  filelistview.h  fileoperation.cpp  fileoperation.h  filesystemmodel.cpp  filesystemmodel.h  filesystemmodelworker.cpp  global.h  griddelegate.h  hamsterfiler.pro  history.cpp  history.h  locationwidget.cpp  locationwidget.h  (+25 more)
